# agentic-theorem-prover

./: .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml  requirements.txt
.codex/: config.toml
.github/workflows/: docs.yml
docs/report-context/: prompts.md
docs/report-context/prompts/: 20260514-151400-repo-mcp-config.md  20260514-160900-mcp-server-selection-research.md  20260514-161451-timestamped-prompt-log-refactor.md  20260514-164311-uv-docs-lockfile-rationale.md  README.md
docs/superpowers/plans/: 2026-05-14-python-docserver-github-pages.md
docs/superpowers/specs/: 2026-05-14-python-docserver-github-pages-design.md
isabelle_ui/: server.py
scripts/: build_docs.py  check_dependency_policy.py  serve_docs.py  sync_mcp_configs.py
